--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Ingeniero</string>
     <string name="wpiszhaslo">Haslo:</string>
-    <string name="wpiszlogin">Login:</string>
+    <string name="name">Nick:</string>
     <string name="zaloguj">Zaloguj</string>
     <string name="zarejestrujsie">Zarejestruj się!</string>
     <string name="email">e-mail:</string>
@@ -11,6 +11,12 @@
     <string name="powtorzhaslo">Powtórz Hasło:</string>
     <string name="niezgodnehasla">Podane hasła się nie zgadzają!</string>
     <string name="rejestracjafail">Nie udało się zarejestrować. Sprawdź podane dane</string>
+    <string name="update">Zaktualizuj</string>
+
+
+    <string name="menu_home">Spotkania</string>
+    <string name="menu_settings">Ustawienia konta</string>
+
     <!--
     This string is used for square devices and overridden by hello_world in
     values-round/strings.xml for round devices.
@@ -33,7 +39,7 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="menu_home">Home</string>
-    <string name="menu_gallery">Gallery</string>
+
     <string name="menu_slideshow">Slideshow</string>
+    <string name="title_activity_meetings">Meetings</string>
 </resources>
