--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,13 @@
     <string name="place_hint">Miejsce Spotkania:</string>
     <string name="desc_hint">Opis Spotkania:</string>
     <string name="name_hint">Nazwa Spotkania:</string>
+    <string name="meeting_name_hint_short">Nazwa: </string>
+    <string name="meeting_desc_hint_short">Opis: </string>
+    <string name="meeting_place_hint_short">Miejsce: </string>
+    <string name="meeting_date_hint_short">Data: </string>
+    <string name="meeting_date_hint_users">Biorą udział:</string>
+
+
     <string name="date_hint">Data spotkania YYYY-MM-DD-HH-MM-SS</string>
     <string name="create_meeting">Utwórz spotkanie!</string>
     <string name="my_meetings">Moje spotkania</string>
@@ -55,9 +62,4 @@
     <string name="second_fragment_label">Second Fragment</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
-
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
