Lift grafik i układów

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Ingeniero</string>
+    <string name="app_name">ePiwo</string>
     <string name="wpiszhaslo">Haslo:</string>
     <string name="name">Nick:</string>
     <string name="zaloguj">Zaloguj</string>
