--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,8 @@
     <string name="new_meeting">Nowe Spotkanie?</string>
     <string name="channel_description">kanalpowiadomien</string>
     <string name="channel_id">epiwochannel</string>
-
+    <string name="kicked_user_tag">(Usunięty)</string>
+    <string name="kicked_user">Wyrzucony za drzwi!</string>
     <string name="place_hint">Miejsce Spotkania:</string>
     <string name="desc_hint">Opis Spotkania:</string>
     <string name="name_hint">Nazwa Spotkania:</string>
@@ -37,6 +38,8 @@
     <string name="menu_home">Spotkania</string>
     <string name="menu_settings">Ustawienia konta</string>
     <string name="host">Organizator</string>
+    <string name="change_password_title">Zmiana hasła</string>
+    <string name="change_password">Zmień hasło!</string>
     <!--
     This string is used for square devices and overridden by hello_world in
     values-round/strings.xml for round devices.
@@ -70,4 +73,11 @@
     <string name="next">Next</string>
     <string name="previous">Previous</string>
     <string name="chat_prompt">Your message...</string>
+    <string name="search">Szukaj spotkań</string>
+    <string name="meeting_details">Szczegóły spotkania</string>
+    <string name="logged_out">Wylogowano</string>
+    <string name="you_are_logged_out">Już się wylogowałeś!</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="password_has_been_changed">Hasło zostało zmienione</string>
 </resources>
