--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,6 +40,8 @@
     <string name="host">Organizator</string>
     <string name="change_password_title">Zmiana hasła</string>
     <string name="change_password">Zmień hasło!</string>
+    <string name="notification_on">Powiadomienia włączone</string>
+    <string name="notification_off">Powiadomienia wyłączone</string>
     <!--
     This string is used for square devices and overridden by hello_world in
     values-round/strings.xml for round devices.
